5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1592_2425.log
== TEST (2019-04-03 14:59:50) 
-- CODE:
dt = int(input("d:"))
cg = int(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t km/l)
-- ERROR:
File "XXXX", line 5
    print(t km/l)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:00:10) 
-- CODE:
dt = int(input("d:"))
cg = int(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t (km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dt = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:00:25) 
-- CODE:
dt = int(input("d:"))
cg = int(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t,(km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dt = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:02:19) 
-- CODE:
dt = int(input("d:"))
cg = int(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t "km/l")
-- ERROR:
File "XXXX", line 5
    print(t "km/l")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:02:29) 
-- CODE:
dt = int(input("d:"))
cg = int(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t,"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dt = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 15:02:38) 
-- CODE:
dt = int(input("d:"))
cg = int(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t,"km/l")
-- EXECUTION TIME:
0.138786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 1, in <module>
    dt = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:02:48) 
-- CODE:
dt = int(input("d:"))
cg = int(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t,"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    dt = int(input())
ValueError: invalid literal for int() with base 10: '28.572'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 15:03:09) 
-- CODE:
dt = int(input("d:"))
cg = int(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t,"km/l")
-- EXECUTION TIME:
0.151997
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2425/main.py", line 1, in <module>
    dt = int(input())
ValueError: invalid literal for int() with base 10: '28.572'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:03:21) 
-- CODE:
dt = float(input("d:"))
cg = float(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t,"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 15:03:28) 
-- CODE:
dt = float(input("d:"))
cg = float(input("c:"))
cm = dt/cg
t = round(cm,3)
print(t,"km/l")
-- EXECUTION TIME:
0.154226
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
